[tool.poetry]
name = "poppy"
version = "0.1.0"
description = ""
authors = ["Andy Hadjigeorgiou <andyxhadji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-auth = "^2.16.1"
google-api-python-client = "^2.78.0"
pychromecast = "^13.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
